public/stylesheets/style.css
/* Page */

:root {
  font: 16px 'Lucida Grande', Helvetica, Arial, sans-serif;
}

html, body {
  height: 100%;
}

body {
  margin: 0px;
}

.hidden {
  display: none !important;
}

/* Header */

/* Header: Generic */

header > nav ul {
  list-style: none;
  padding: 0px;
  margin: 0px;
}

header > nav li {
  display: inline-block;
  padding: .5rem;
}

header a {
  color: inherit;
  text-decoration: none;
}

/* Header: Top Navigation Bar */

.navbar-top {
  display: flex;
  padding: 1rem;
}

.navbar-top__section {
  display: flex;
  align-items: center;
  justify-content: left;
  flex-grow: 1;
}

.navbar-top__section:last-child {
  flex-grow: 0;
}

/* Content */

.content {
  height: 100%;
  padding: 0 2rem;
}

/* Page Heading */
.page-heading {
  font-size: 2.5rem;
  text-align: center;
}

/* Form */

.form-item {
  display: block;
  margin-bottom: 1rem;
}

.form-item input[type="text"] {
  margin-top: .5rem;
  padding: .5rem;
  width: 100%;
}

/* Flashes */

.flash {
  background: white;
  border: 3px solid black;
  display: flex;
  padding: 1rem;
  margin: 1rem;
}
.flash p {
  margin: 0;
  flex-grow: 1;
}
.flash button {
  background: none;
  border: none;
}

.flash--success {
  border-color: rgba(145,232,66,1)
}
.flash--warning {
  border-color: rgb(238, 255, 82)
}
.flash--error {
  border-color: rgba(200,0,0,1)
}
.flash--info {
  border-color: rgb(82, 229, 255)
}

/* Lists */

.list-page {
  --line-color: hsla(0, 0%, 90%, 90%);
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.list-page__title {
  font-size: 2.5rem;
  text-align: center;
}

.list-page__list a {
  text-decoration: none;
}

.list-page__list {
  color: black;
  background: white;
  margin: 0;
  list-style: none;
  border: 1px solid lightgrey;
  border-bottom: none;
  padding: 1rem;
  width: 100%;
  max-width: 620px;
  flex-grow: 1;
  border-radius: .5rem .5rem 0 0;
}

.list-page__list-item {
  padding: .5rem;
  border-bottom: 1px solid var(--line-color);
  margin-bottom: .5rem;
}

.list-page__form-item {
  padding: .5rem;
  width: calc(100% - 1rem);
  border: none;
  border-bottom: 1px solid var(--line-color);
}

